<resources>
    <string name="app_name">Composition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_title">Состав числа</string>
    <string name="welcome_description">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы скмма чисел из двух нижних фигур была равна числу в верхней фигуре для этого нужно вставить недостающее число.</string>
    <string name="welcome_example">Пример: в верхнем круге число 9, в одном из нижних знак вопроса, а в другом число 3. Значит на месте вопросительного знака должно быть число 6, потому что 3 + 6 = 9</string>
    <string name="welcome_button">Понятно</string>
    <string name="choose_level">Выберите уровень:</string>
    <string name="button_test">Тест</string>
    <string name="button_easy_level">Легкий</string>
    <string name="button_hard_level">Сложный</string>
    <string name="button_normal_level">Нормальный</string>
    <string name="percent_of_right_answers">Правильных ответов %s (минимум %s)</string>
    <string name="button_try_again">Попробовать снова</string>
    <string name="min_rights_answers">Необходимое количество правильных ответов: %s</string>
    <string name="players_score">Ваш счёт: %s</string>
    <string name="min_percent">Необходимый процент правильных ответов: %s</string>
    <string name="player_percent">Необходимый процент правильных ответов: %s</string>
</resources>