<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ChooseLevelFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/choose_level"
        android:textSize="24sp" />

    <Button
        android:id="@+id/bt_level_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/button_test"
        android:textSize="22sp" />

    <Button
        android:id="@+id/bt_level_easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/button_easy_level"
        android:textSize="22sp" />
    <Button
        android:id="@+id/bt_level_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/button_normal_level"
        android:textSize="22sp" />
    <Button
        android:id="@+id/bt_level_hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/button_hard_level"
        android:textSize="22sp" />

</LinearLayout>