<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_emoji"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_min_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:srcCompat="@drawable/sad_smile" />

    <TextView
        android:id="@+id/tv_min_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/min_rights_answers"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_player_score"
        app:layout_constraintTop_toBottomOf="@+id/iv_emoji"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/tv_player_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/players_score"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_min_percent"
        app:layout_constraintTop_toBottomOf="@+id/tv_min_score"
        tools:layout_editor_absoluteX="8dp" />


    <TextView
        android:id="@+id/tv_min_percent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/min_percent"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_player_percent"
        app:layout_constraintTop_toBottomOf="@+id/tv_player_score"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/tv_player_percent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/player_percent"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/tv_min_percent"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="10dp"
        android:text="@string/button_try_again"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>