<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.WelcomeFragment">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="16dp"
            />
        <TextView
            android:id="@+id/tv_welcome_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo"
            android:text="@string/welcome_title"
            android:textSize="24sp"
            android:layout_margin="16dp"
            />
        <TextView
            android:id="@+id/tv_welcome_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome_title"
            android:text="@string/welcome_description"
            android:textSize="18sp"
            android:layout_margin="16dp"
            />
        <TextView
            android:id="@+id/tv_welcome_example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome_description"
            android:text="@string/welcome_example"
            android:textSize="18sp"
            android:layout_margin="16dp"
            />

        <Button
            android:id="@+id/bt_understand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_button"
            android:textSize="18sp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="8dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>